--- a/index.html
+++ b/index.html
@@ -8,97 +8,102 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    
- 
-    
+
   </head>
   <body>
 <!--------HEADER-------->
       <header>
-        <nav class="min-nav" >
+        <div class="container main-nav"> 
+          <nav class="header-nav">
           <a href="./index.html" class="logo"><span>Web</span>Studio</a>
           <ul class="nav-list">
             <li class="nav-item"><a class="nav-link" href="">Studio</a></li>
             <li class="nav-item"><a class="nav-link"href="./portfolio.html" >Portfolio</a></li>
             <li class="nav-item"><a class="nav-link"href="" >Contacts</a></li>
           </ul>
-      </nav>
-      <address class="contacts">
-      <ul class="contacts-list" >
-          <li class="contacts-item"><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
-          <li class="contacts-item"><a href="tel:+110001111111" class="contacts-link">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
+          </nav>
+          <address class="contacts">
+          <ul class="contacts-list" >
+              <li class="contacts-item"><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
+              <li class="contacts-item"><a href="tel:+110001111111" class="contacts-link">+11 (000) 111-11-11</a></li>
+          </ul>
+          </address>
+        </div>
       </header>
       <main>
 <!--------HERO-------->
         <section class="hero" >
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="main-btn btn">Order Service</button>
+          <div class="container"><h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="main-btn btn">Order Service</button></div>
         </section>
-<!--------ADVANTAGES-------->
-        <section>
-          <h2 hidden>advantages</h2>
-          <ul class="list">
-            <li>
-              <h3 class="decsr">Strategy</h3>
-              <p >Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-            </li>
-            <li>
-              <h3 class="decsr" >Punctuality</h3>
-              <p >Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            </li>
-            <li>
-              <h3 class="decsr">Diligence</h3>
-              <p >Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-            </li>
-            <li>
-              <h3 class="decsr">Technologies</h3>
-              <p >Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-            </li>
-          </ul>
+        <section class="advatages-list">
+          <div class="container"> <h2 hidden>advantages</h2>
+            <ul class="list advantages">
+              <li class="advantages-item">
+                <h3 class="decsr advantages-descr">Strategy</h3>
+                <p >Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+              </li>
+              <li class="advantages-item">
+                <h3 class="decsr advantages-descr" >Punctuality</h3>
+                <p >Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+              </li>
+              <li class="advantages-item">
+                <h3 class="decsr advantages-descr">Diligence</h3>
+                <p >Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+              </li>
+              <li class="advantages-item">
+                <h3 class="decsr advantages-descr">Technologies</h3>
+                <p >Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+              </li>
+            </ul>
+          </div>
         </section>
-<!--------IMG-LIST-------->
-        <section>
-          <h2 class="title">What are we doing</h2>
-          <ul class="pictures list">
-            <li><img src="./images/imac.jpg" alt="imac" width="360"></li>
-            <li><img src="./images/iphone.jpg" alt="iphone" width="360"></li>
-            <li><img src="./images/maciphone.jpg" alt="maciphone" width="360"></li>
-          </ul>
+        <section class="img-list">
+          <div class="container">
+            <h2 class="title example-title">What are we doing</h2>
+            <ul class="example-pictures list">
+              <li class="example-pictures-list "><img src="./images/imac.jpg" alt="imac" width="360"></li>
+              <li class="example-pictures-list "><img src="./images/iphone.jpg" alt="iphone" width="360"></li>
+              <li class="example-pictures-list "><img src="./images/maciphone.jpg" alt="maciphone" width="360"></li>
+            </ul>
+          </div>
         </section>
-<!--------TEAM-------->
-        <section class="team">
-          <h2 class="title">Our Team</h2>
-          <ul class="list">
-            <li>
-              <img src="./images/man1.jpg" alt="man1" width="264">
-              <h3 class="decsr">Mark Guerrero</h3>
-              <p class="sub-descr">Product Designer</p>
-            </li>
-            <li>
-              <img src="./images/man2.jpg" alt="man2" width="264">
-              <h3 class="decsr"> Tom Ford</h3>
-              <p class="sub-descr">Frontend Developer</p>
-            </li>
-            <li>
-              <img src="./images/girl.jpg" alt="girl" width="264">
-              <h3 class="decsr">Camila Garcia</h3>
-              <p class="sub-descr">Marketing</p>
-            </li>
-            <li>
-              <img src="./images/man3.jpg" alt="man3" width="264">
-              <h3 class="decsr">Daniel Wilson</h3>
-              <p class="sub-descr">UI Designer</p>
-            </li>
-          </ul>
+        <section class="team ">
+          <div class="container">
+            <h2 class="title team-title">Our Team</h2>
+            <ul class="list team-list">
+              <li class="team-item">
+                <img src="./images/man1.jpg" alt="man1" width="264">
+                <h3 class="decsr team-descr">Mark Guerrero</h3>
+                <p class="sub-descr">Product Designer</p>
+              </li>
+              <li class="team-item">
+                <img src="./images/man2.jpg" alt="man2" width="264">
+                <h3 class="decsr team-descr"> Tom Ford</h3>
+                <p class="sub-descr">Frontend Developer</p>
+              </li>
+              <li class="team-item">
+                <img src="./images/girl.jpg" alt="girl" width="264">
+                <h3 class="decsr team-descr">Camila Garcia</h3>
+                <p class="sub-descr">Marketing</p>
+              </li>
+              <li class="team-item">
+                <img src="./images/man3.jpg" alt="man3" width="264">
+                <h3 class="decsr team-descr">Daniel Wilson</h3>
+                <p class="sub-descr">UI Designer</p>
+              </li>
+            </ul>
+          </div>
         </section>
       </main>
 <!--------FOOTER-------->
       <footer class="footer">
-        <a href="./index.html" class=" logo footer-logo"><span>Web</span>Studio</a>
+        <div class="container footer-inf">
+          <a href="./index.html" class=" logo footer-logo"><span>Web</span>Studio</a>
           <p class="footer-descr sub-descr ">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
         </footer>
   </body>
 </html>
