--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!--------HEADER-------->
-    <header>
+    <header class="header">
       <div class="container main-nav">
         <nav class="header-nav">
           <a href="./index.html" class="logo"><span>Web</span>Studio</a>
@@ -71,7 +71,7 @@
           <ul class="list filter-list">
             <li class="filter-item">
               <img src="./images/BankingApp.jpg" alt="App" width="360" />
-              <h2 class="decsr portfolio-descr">
+              <h2 class="descr portfolio-descr">
                 Banking App Interface Concept
               </h2>
               <p class="sub-descr">App</p>
@@ -82,17 +82,17 @@
                 alt="Marketing"
                 width="360"
               />
-              <h2 class="decsr portfolio-descr">Cashless Payment</h2>
+              <h2 class="descr  portfolio-descr">Cashless Payment</h2>
               <p class="sub-descr">Marketing</p>
             </li>
             <li class="filter-item">
               <img src="./images/MeditaionApp.jpg" alt="App" width="360" />
-              <h2 class="decsr portfolio-descr">Meditaion App</h2>
+              <h2 class="descr  portfolio-descr">Meditaion App</h2>
               <p class="sub-descr">App</p>
             </li>
             <li class="filter-item">
               <img src="./images/TaxiService.jpg" alt="Marketing" width="360" />
-              <h2 class="decsr portfolio-descr">Taxi Service</h2>
+              <h2 class="descr  portfolio-descr">Taxi Service</h2>
               <p class="sub-descr">Marketing</p>
             </li>
             <li class="filter-item">
@@ -101,7 +101,7 @@
                 alt="Design"
                 width="360"
               />
-              <h2 class="decsr portfolio-descr">Screen Illustrations</h2>
+              <h2 class="descr  portfolio-descr">Screen Illustrations</h2>
               <p class="sub-descr">Design</p>
             </li>
             <li class="filter-item">
@@ -110,7 +110,7 @@
                 alt="Marketing"
                 width="360"
               />
-              <h2 class="decsr portfolio-descr">Online Courses</h2>
+              <h2 class="descr  portfolio-descr">Online Courses</h2>
               <p class="sub-descr">Marketing</p>
             </li>
             <li class="filter-item">
@@ -119,17 +119,17 @@
                 alt="Design"
                 width="360"
               />
-              <h2 class="decsr portfolio-descr">Instagram Stories Concept</h2>
+              <h2 class="descr portfolio-descr">Instagram Stories Concept</h2>
               <p class="sub-descr">Design</p>
             </li>
             <li class="filter-item">
               <img src="./images/OrganicFood.jpg" alt="Web Site" width="360" />
-              <h2 class="decsr portfolio-descr">Organic Food</h2>
+              <h2 class="descr  portfolio-descr">Organic Food</h2>
               <p class="sub-descr">Web Site</p>
             </li>
             <li class="filter-item">
               <img src="./images/Coffee.jpg" alt="Web Site" width="360" />
-              <h2 class="decsr portfolio-descr">Fresh Coffee</h2>
+              <h2 class="descr  portfolio-descr">Fresh Coffee</h2>
               <p class="sub-descr">Web Site</p>
             </li>
           </ul>
